--- a/examples/index.html
+++ b/examples/index.html
@@ -5,77 +5,206 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WEB smoke</title>
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
 </head>
 <body>
     <header class="header">
-        <h1 class="header__heading">WEB smoke image comparison</h1>
+        <h1 class="header__heading">Test results</h1>
     </header>
 
     <main class="container">
         <div class="comparison-block">
             <div class="comparison-control">
-                <button type="button" class="comparison-control__collapse" data-toggle-id="comparison-block-1">Collapse</button>
+                <button type="button" class="comparison-control__collapse green" data-toggle-id="comparison-block-1">Test name</button>
             </div>
 
             <div class="comparison-content" id="comparison-block-1">
                 <div class="comparison-image-wrapper comparison-image-wrapper__left">
                     <div class="comparison-image-control">
+                        Expected result
+                    </div>
+                    <div class="comparison-image-block">
+                        <img src="expected/google.com.png" class="comparison-image" alt="">
+                    </div>
+                </div>
+
+                <div class="comparison-image-wrapper comparison-image-wrapper__right">
+                    <div class="comparison-image-control">
                         <span>Actual result</span>
                         <button type="button" class="comparison-image-control__button" data-toggle-id="comparison-diff-1">Show difference</button>
                     </div>
-
                     <div class="comparison-image-block">
-                        <img src="img/actual/google.com.png" class="comparison-image" alt="">
+                        <img src="actual/google.com.png" class="comparison-image" alt="">
 
-                        <img src="img/actual/google.com-diff.png" class="comparison-diff" id="comparison-diff-1" alt="">
-                    </div>
-                </div>
-
-                <div class="comparison-image-wrapper comparison-image-wrapper__right">
-                    <div class="comparison-image-control">
-                        Expected result
-                    </div>
-
-                    <div class="comparison-image-block">
-                        <img src="img/expected/google.com.png" class="comparison-image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="comparison-block">
-            <div class="comparison-control">
-                <button type="button" class="comparison-control__collapse" data-toggle-id="comparison-block-2">Collapse</button>
-            </div>
-
-            <div class="comparison-content" id="comparison-block-2">
-                <div class="comparison-image-wrapper comparison-image-wrapper__left">
-                    <div class="comparison-image-control">
-                        <span>Actual result</span>
-                        <button type="button" class="comparison-image-control__button" data-toggle-id="comparison-diff-2">Show difference</button>
-                    </div>
-
-                    <div class="comparison-image-block">
-                        <img src="img/actual/google.com.png" class="comparison-image" alt="">
-
-                        <img src="img/actual/google.com-diff.png" class="comparison-diff" id="comparison-diff-2" alt="">
-                    </div>
-                </div>
-
-                <div class="comparison-image-wrapper comparison-image-wrapper__right">
-                    <div class="comparison-image-control">
-                        Expected result
-                    </div>
-
-                    <div class="comparison-image-block">
-                        <img src="img/expected/google.com.png" class="comparison-image" alt="">
+                        <img src="actual/google.com-diff.png" class="comparison-diff" id="comparison-diff-1" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <script>
+function toggleElementVisibility (element) {
+    element.hidden = !element.hidden;
+}
+
+document.addEventListener('DOMContentLoaded', function () {
+    var collapseButtons = document.querySelectorAll('.comparison-control__collapse');
+    var collapsableBlocks = document.querySelectorAll('.comparison-block > .comparison-content');
+
+    for (var button of collapseButtons) {
+        button.addEventListener('click', function () {
+            var comparisonBlock = document.getElementById(this.dataset.toggleId);
+            toggleElementVisibility(comparisonBlock);
+        });
+    }
+
+    var showDiffButtons = document.querySelectorAll('.comparison-image-control__button');
+
+    for (var diffButton of showDiffButtons) {
+        diffButton.addEventListener('click', function () {
+            var diffImage = document.getElementById(this.dataset.toggleId);
+            toggleElementVisibility(diffImage);
+        });
+    }
+});
+    </script>
+<style>
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none!important;}
+</style>
+<style>
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #1f1f1f;
+    color: white;
+}
+
+.header {
+    border-bottom: 1px solid red;
+    margin-bottom: 5px;
+}
+
+.header__heading {
+    text-align: center;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.comparison-block {
+    width: 100%;
+    background-color: #9e9e9e;
+    margin-bottom: 30px;
+    border-radius: 0 0 5px 5px;
+}
+
+.comparison-control {
+    margin-top: 5px;
+}
+
+.comparison-control__collapse {
+    width: 100%;
+    padding: 8px 0;
+    cursor: pointer;
+    border: none;
+    display: block;
+    margin-bottom: 5px;
+    background-color: #e0e0e0;
+    outline: none;
+    transition: all .1s linear;
+}
+
+.comparison-control__collapse:active {
+    background-color: #bbbbbb;
+}
+
+.comparison-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.comparison-image-wrapper {
+    flex-basis: calc(50% - 5px);
+    margin-bottom: 10px;
+}
+
+.comparison-image-wrapper__left {
+    margin-right: 5px;
+}
+
+.comparison-image-wrapper__right {
+    margin-left: 5px;
+}
+
+.comparison-image-block {
+    position: relative;
+}
+
+.comparison-image-block > .comparison-image {
+    height: auto;
+    max-width: 100%;
+    display: block;
+}
+
+.comparison-diff {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.comparison-diff__hidden {
+    display: none;
+}
+
+.green {
+    background-color: #25b47d;
+}
+
+.red {
+    background-color: red;
+}
+
+.comparison-image-control {
+    padding: 5px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 32px;
+}
+
+.comparison-image-control__button {
+    height: 25px;
+    outline: none;
+    border: none;
+    background-color: #e9a831;
+    transition: all .1s linear;
+    color: inherit;
+    padding: 0 10px;
+    display: block;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.comparison-image-control__button:active {
+    background-color: #91681d;
+}
+
+@media screen and (max-width: 767px) {
+    .comparison-content {
+        flex-direction: column;
+    }
+
+    .comparison-image-wrapper {
+        margin-right: 0;
+        margin-left: 0;
+    }
+}
+</style>
 </body>
 </html>
