--- a/web_smoke/index.html
+++ b/web_smoke/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__heading">Test results</h1>
+        <h1 class="header__heading">Test results. Total tests - {{ total.all }}. Failed tests - {{ total.failed }} </h1>
     </header>
 
     <main class="container">
+        {% for test in tests %}
         <div class="comparison-block">
             <div class="comparison-control">
-                <button type="button" class="comparison-control__collapse green" data-toggle-id="comparison-block-1">Test name</button>
+                <button type="button" class="comparison-control__collapse {% if test.passed %}green{% else %}red{% endif %}" data-toggle-id="comparison-block-1">{{ test.name }}</button>
             </div>
 
             <div class="comparison-content" id="comparison-block-1">
@@ -23,23 +24,25 @@
                         Expected result
                     </div>
                     <div class="comparison-image-block">
-                        <img src="expected/google.com.png" class="comparison-image" alt="">
+                        <img src="{{ test.expected }}" class="comparison-image" alt="">
                     </div>
                 </div>
 
                 <div class="comparison-image-wrapper comparison-image-wrapper__right">
                     <div class="comparison-image-control">
                         <span>Actual result</span>
-                        <button type="button" class="comparison-image-control__button" data-toggle-id="comparison-diff-1">Show difference</button>
+                        <button type="button" class="comparison-image-control__button" data-toggle-id="comparison-diff-{{ loop.index }}">Show difference</button>
                     </div>
                     <div class="comparison-image-block">
-                        <img src="actual/google.com.png" class="comparison-image" alt="">
-
-                        <img src="actual/google.com-diff.png" class="comparison-diff" id="comparison-diff-1" alt="">
+                        <img src="{{ test.actual }}" class="comparison-image" alt="">
+                        {% if not test.passed %}
+                        <img src="{{ test.diff }}" class="comparison-diff" id="comparison-diff-{{ loop.index }}" alt="">
+                        {% endif %}
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </main>
     <script>
 function toggleElementVisibility (element) {
@@ -167,7 +170,7 @@ body {
 }
 
 .red {
-    background-color: red;
+    background-color: #aa0000;
 }
 
 .comparison-image-control {
